feat: login api done

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,9 @@ PORT=3000
 NODE_ENV=development
 DEV_ORIGIN=*
 PROD_ORIGIN=https://mysite.com
+
+MONGODB_URI=mongodb://127.0.0.1:27017/flixflex
+
+JWT_SECRET=your_secret_key_for_jwt
+
+TMDB_API_KEY=5c54e7674608c0b859d28c5db25354d5
