--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "@babel/cli": "^7.22.10",
     "@babel/core": "^7.22.11",
     "@babel/node": "^7.22.10",
-    "@babel/preset-env": "^7.22.10"
+    "@babel/preset-env": "^7.22.10",
+    "babel-watch": "^7.8.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
-    "babel-watch": "^7.8.1",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^7.3.0",
     "eslint": "^8.48.0",
