--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": false,
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src -d dist --copy-files",
+    "build": "npx babel src -d dist --copy-files",
     "start": "cross-env NODE_ENV=production dotenv -e .env node dist/index.js",
     "dev": "cross-env NODE_ENV=development dotenv -e .env babel-watch -w package.json -w src src/index.js",
     "test": "cross-env NODE_ENV=test dotenv -e .env jest --verbose",
@@ -30,14 +30,14 @@
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
     "@babel/cli": "^7.22.10",
     "@babel/core": "^7.22.11",
     "@babel/node": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
-    "babel-watch": "^7.8.1"
-  },
-  "devDependencies": {
+    "babel-watch": "^7.8.1",
     "@types/jest": "^29.5.4",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^7.3.0",
