--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flixf-lex-movies-app",
+  "name": "flix-flex-movies-app",
   "version": "1.3.0",
   "description": "FlixFlex movies app",
   "author": "Idris Chaalel <chaalelidris8@gmail.com>",
@@ -35,8 +35,6 @@
   "devDependencies": {
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.3",
-    "@babel/node": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
     "@types/jest": "^29.5.4",
     "babel-watch": "^7.8.1",
     "cross-env": "^7.0.3",
