--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "flix-flex-movies-app",
-  "version": "1.3.0",
-  "description": "FlixFlex movies app",
-  "author": "Idris Chaalel <chaalelidris8@gmail.com>",
-  "license": "MIT-0",
-  "private": false,
-  "main": "dist/index.js",
+  "name": "flixflex-backend",
+  "version": "1.5.0",
+  "description": "Flixflex bavckend api",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "build": "npx babel src -d dist --copy-files",
-    "start": "cross-env NODE_ENV=production dotenv -e .env node dist/index.js",
-    "dev": "cross-env NODE_ENV=development dotenv -e .env babel-watch -w package.json -w src src/index.js",
-    "test": "cross-env NODE_ENV=test dotenv -e .env jest --verbose",
-    "test:watch": "cross-env NODE_ENV=test dotenv -e .env jest --watch",
+    "start": "cross-env NODE_ENV=production node src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
     "lint": "eslint src"
   },
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
-  },
+  "author": "idris chaalel",
+  "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -36,9 +32,7 @@
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.3",
     "@types/jest": "^29.5.4",
-    "babel-watch": "^7.8.1",
     "cross-env": "^7.0.3",
-    "dotenv-cli": "^7.3.0",
     "eslint": "^8.48.0",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
