remove config.js

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "cross-env NODE_ENV=production babel-node src/index.js",
-    "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose",
-    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "start": "babel-node src/index.js",
+    "dev": "nodemon src/index.js",
+    "test": "jest --verbose",
+    "test:watch": "jest --watch",
     "lint": "eslint src"
   },
   "author": "idris chaalel",
