--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "flixflex-backend",
   "version": "1.5.0",
-  "description": "Flixflex bavckend api",
+  "description": "Flixflex backend api",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "npx babel-node src/index.js",
-    "dev": "nodemon src/index.js",
+    "build": "babel src --out-dir dist --copy-files",
+    "start": "node dist/index.js",
+    "dev": "nodemon --exec babel-node src/index.js",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
     "lint": "eslint src"
