--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "flixflex-backend",
   "version": "1.5.0",
   "description": "Flixflex backend api",
-  "main": "src/index.js",
-  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist --copy-files",
-    "start": "babel-node src/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon --exec babel-node src/index.js",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
@@ -14,6 +13,10 @@
   },
   "author": "idris chaalel",
   "license": "ISC",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
   "dependencies": {
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
