--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist --copy-files",
-    "start": "node dist/index.js",
+    "start": "babel src -d dist --copy-files && node dist/index.js",
     "dev": "nodemon --exec babel-node src/index.js",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
@@ -30,13 +30,13 @@
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
+    "passport-local": "^1.0.0",
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.3",
     "@babel/node": "^7.22.19",
-    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-env": "^7.23.3"
+  },
+  "devDependencies": {
     "@types/jest": "^29.5.4",
     "cross-env": "^7.0.3",
     "eslint": "^8.48.0",
