--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist --copy-files",
-    "start": "babel src -d dist --copy-files && node dist/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon --exec babel-node src/index.js",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
